still attempting to fix projectModal resizing on small devices

--- a/src/sections/projectModal/projectmodal.css
+++ b/src/sections/projectModal/projectmodal.css
@@ -54,6 +54,8 @@
 }
 
 .projectmodal {
+  width: 100%;
+  height: auto;
   padding: 30px;
   text-align: left;
   background: #fcfaf9;
@@ -247,7 +249,7 @@ p.open-text a {
 /* @media screen and (max-width: 1024px) {
 } */
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 599px) {
   .overlay-projectmodal {
     display: none;
   }
@@ -257,6 +259,10 @@ p.open-text a {
     max-width: 100%;
     max-height: 100%;
     position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow-y: auto;
     top: 0;
     right: 0;
     left: 0;
@@ -265,8 +271,9 @@ p.open-text a {
 
   .container-right {
     width: 100%;
-    height: 100%;
-    margin: 0 auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
     overflow-y: auto;
   }
 
@@ -274,14 +281,9 @@ p.open-text a {
     width: 100%;
     max-width: 100%;
     height: fit-content;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    flex-wrap: wrap;
-    flex-shrink: inherit;
-    align-items: left;
+    box-sizing: border-box;
   }
+
   .projectmodal-footer {
     position: relative;
     width: 100%;
